--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-rigger": "^0.5.8",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11",
     "imagemin-pngquant": "^5.0.0",
-    "rimraf": "^2.5.4"
+    "main-bower-files": "^2.13.1",
+    "rimraf": "^2.5.4",
+    "wiredep": "^4.0.0"
   }
 }
