--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-minify-css": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.2",
     "gulp-watch": "^4.3.11",
     "imagemin-pngquant": "^5.0.0",
     "main-bower-files": "^2.13.1",
