--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.3.2",
+    "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.0.0",
