--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.5",
     "normalize-css": "normalize.css#^5.0.0",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "components-font-awesome": "^4.7.0"
   }
 }
